# minigia

./: .gitignore  CMakeLists.txt  independent_particle.cc  independent_particle.h  independent_particle_benchmark.cc  independent_particle_main.cc  space_charge_3d.cc  space_charge_3d_open_hockney.cc  space_charge_3d_open_hockney_eigen.cc
minigia-base/: Dockerfile  GNUmakefile
